completed basic login/reg with jwt

--- a/appsettings.json
+++ b/appsettings.json
@@ -16,5 +16,9 @@
         "Default": "Warning"
       }
     }
+  },
+  "JwtIssuerOptions": {
+  "Issuer": "webApi",
+  "Audience": "http://localhost:5000/"
   }
 }
