--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@angular/animations": "^4.4.6",
+    "@angular/cdk": "^5.1.0",
     "@angular/common": "^4.4.6",
     "@angular/common/http": "^4.4.6",
     "@angular/compiler": "^4.4.6",
@@ -14,6 +15,7 @@
     "@angular/core": "^4.4.6",
     "@angular/forms": "^4.4.6",
     "@angular/http": "^4.4.6",
+    "@angular/material": "^5.1.0",
     "@angular/platform-browser": "^4.4.6",
     "@angular/platform-browser-dynamic": "^4.4.6",
     "@angular/platform-server": "^4.4.6",
